2009-10-02  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (update-subdirs-CMD): Add cedet to
	$(WINS_SUBDIR).
	(WINS_CEDET_SUBDIRS): List of subdirectories of cedet.
	(bootstrap-clean-CMD, bootstrap-clean-SH): Remove *.elc files in
	subdirs of cedet as well.
	(AUTOGENEL): Add loaddefs.el files in cedet subdirectories.

2009-10-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/eldoc.el (eldoc-get-fnsym-args-string):
	Obey advertised-signature-table.

	* help-fns.el (help-function-arglist): Don't check
	advertised-signature-table.
	(describe-function-1): Do it here instead so it also applies to subrs.

2009-10-02  Michael Albinus  <michael.albinus@gmx.de>

	* simple.el (start-file-process): Say in the doc-string, that file
	handlers might not support pty association, if PROGRAM is nil.

	* net/ange-ftp.el (ange-ftp-generate-passwd-key): Check, whether
	HOST and USER are strings.  They are nil, when there are
	incomplete entries in ~/.netrc, for example.
	(ange-ftp-delete-directory): Implement RECURSIVE case.  Change to
	root directory ("device busy" error otherwise).

	* net/tramp-smb.el (tramp-smb-handle-make-directory-internal):
	Flush file properties of created directory.

2009-10-02  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (WINS_BASIC): Remove cedet.
	(WINS_CEDET): Add cedet.
	(update-subdirs-SH): Use $(WINS_SUBDIR), not $(WINS).

2009-10-02  Kevin Ryde  <user42@zip.com.au>

	* net/browse-url.el (browse-url): Pass any symbol in
	browse-url-browser-function to `apply', since if you've mistakenly put
	an unbound symbol then the error is clearer.  (Bug#4531)

2009-10-02  Juanma Barranquero  <lekktu@gmail.com>

	* allout.el (allout-init, allout-back-to-current-heading)
	(allout-beginning-of-current-entry, allout-ascend-to-depth)
	(allout-ascend, allout-up-current-level, allout-end-of-level)
	(allout-previous-visible-heading, allout-forward-current-level)
	(allout-backward-current-level, allout-show-children):